--- a/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
+++ b/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
@@ -45,14 +45,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FrmGirisYap.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmGirisYap.Designer.cs">
+      <DependentUpon>FrmGirisYap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmHesapAc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmHesapAc.Designer.cs">
+      <DependentUpon>FrmHesapAc.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmGirisYap.resx">
+      <DependentUpon>FrmGirisYap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmHesapAc.resx">
+      <DependentUpon>FrmHesapAc.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
