--- a/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
+++ b/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SMF.cs" />
     <EmbeddedResource Include="FrmGirisYap.resx">
       <DependentUpon>FrmGirisYap.cs</DependentUpon>
     </EmbeddedResource>
