--- a/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
+++ b/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
@@ -65,11 +65,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmAnaMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAnaMenu.Designer.cs">
+      <DependentUpon>FrmAnaMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmGirisYap.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmGirisYap.Designer.cs">
       <DependentUpon>FrmGirisYap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmGucluSifreOlustur.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGucluSifreOlustur.Designer.cs">
+      <DependentUpon>FrmGucluSifreOlustur.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmHakkinda.cs">
       <SubType>Form</SubType>
@@ -104,8 +116,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SMF.cs" />
+    <EmbeddedResource Include="FrmAnaMenu.resx">
+      <DependentUpon>FrmAnaMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmGirisYap.resx">
       <DependentUpon>FrmGirisYap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGucluSifreOlustur.resx">
+      <DependentUpon>FrmGucluSifreOlustur.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmHakkinda.resx">
       <DependentUpon>FrmHakkinda.cs</DependentUpon>
