--- a/RabtBil-Musteri-Kayit-v2/App.config
+++ b/RabtBil-Musteri-Kayit-v2/App.config
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="RabtBil_Musteri_Kayit_v2.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
+  <userSettings>
+    <RabtBil_Musteri_Kayit_v2.Properties.Settings>
+      <setting name="Dil" serializeAs="String">
+        <value>tr</value>
+      </setting>
+      <setting name="LisansliMi" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="LisansAnahtari" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Eposta" serializeAs="String">
+        <value />
+      </setting>
+    </RabtBil_Musteri_Kayit_v2.Properties.Settings>
+  </userSettings>
 </configuration>
