--- a/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
+++ b/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
@@ -122,6 +122,12 @@
     <Compile Include="FrmUrunTeslim.Designer.cs">
       <DependentUpon>FrmUrunTeslim.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmYazdir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmYazdir.Designer.cs">
+      <DependentUpon>FrmYazdir.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SMF.cs" />
