--- a/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
+++ b/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
@@ -161,6 +161,9 @@
     <EmbeddedResource Include="FrmUrunTeslim.resx">
       <DependentUpon>FrmUrunTeslim.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmYazdir.resx">
+      <DependentUpon>FrmYazdir.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
