--- a/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
+++ b/RabtBil-Musteri-Kayit-v2/RabtBil-Musteri-Kayit-v2.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{82A2E500-C40B-4200-8EC5-DB8457B2512B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>RabtBil_Musteri_Kayit_v2</RootNamespace>
-    <AssemblyName>RabtBil-Musteri-Kayit-v2</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <AssemblyName>RabtBilMusteriKayit</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
